--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 ---
 layout: default
-title: Matthew Cobbs
+title: Matthew Cobbs, Detroit Web Developer
 ---
 
-Welcome!
+<section id="home">
+    <h1>Blog Posts</h1>
+    <ul class="posts">
+    {% for post in site.posts %}
+        <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+    </ul>
+
+    <h1>Open Source Projects</h1>
+    <ul class="posts">
+        <li><a href="http://github.matthewcobbs.com/Stitcher/">Stitcher</a> An HTML5 sprite generator.</li>
+    </ul>
+</section>
