adding first post

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@ title: Matthew Cobbs, Detroit Web Developer
 
     <h1>Open Source Projects</h1>
     <ul class="posts">
-        <li><a href="/Stitches/">Stitches</a> An HTML5 sprite generator.</li>
+        <li><a href="/Stitches/">Stitches</a>: An HTML5 sprite generator.</li>
     </ul>
 </section>
