--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@ title: Matthew Cobbs, Detroit Web Developer
 
     <h1>Open Source Projects</h1>
     <ul class="posts">
-        <li><a href="/stitches/">Stitches</a>: An HTML5 sprite generator.</li>
+        <li><a href="/stitches/">Stitches</a> - An HTML5 sprite generator.</li>
+        <li><a href="/lockdown/">Lockdown</a> - Obfuscates code snippets by writing them to the canvas.</li>
     </ul>
 </section>
