adding fb stuff

--- a/index.html
+++ b/index.html
@@ -17,3 +17,7 @@ title: Matthew Cobbs, Detroit Web Developer
         <li><a href="/lockdown/">Lockdown</a> - Obfuscates code snippets by writing them to the canvas.</li>
     </ul>
 </section>
+    
+<section id="comments">
+    <div class="fb-like-box" data-href="http://draeton.github.com/" data-width="292" data-show-faces="false" data-stream="false" data-header="false"></div>
+</section>
