--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ title: Matthew Cobbs, Detroit Web Developer
 </section>
     
 <section id="comments">
-    <div class="fb-like-box" data-href="http://draeton.github.com/" data-width="292" data-show-faces="false" data-stream="false" data-header="false"></div>
+    <div class="fb-comments" data-href="draeton.github.com" data-num-posts="2" data-width="572"></div>
 </section>
