removing data-href from comments

--- a/index.html
+++ b/index.html
@@ -19,5 +19,5 @@ title: Matthew Cobbs, Detroit Web Developer
 </section>
     
 <section id="comments">
-    <div class="fb-comments" data-href="http://draeton.github.com/" data-num-posts="2" data-width="572"></div>
+    <div class="fb-comments" data-href="" data-num-posts="2" data-width="572"></div>
 </section>
