adding short bio to home

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@ title: Matthew Cobbs, Detroit Web Developer
 ---
 
 <section id="home">
+    <p>Matthew Cobbs is a 30 year-old web developer from Detroit. As both an in-house and freelance developer, 
+        he has several years of experience with planning, designing, developing, and maintaining websites.
+        Matthew loves sushi, Almodovar, good fiction, and JavaScript.</p>
+    
     <h1>Blog Posts</h1>
     <ul class="posts">
     {% for post in site.posts %}
