--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
 
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-  <title>404 Page Not Found</title>
+  <title>Page Not Found - Error 404</title>
   <meta name="description" content="Matthew Cobbs - a 30 year-old web developer from Detroit">
   <meta name="author" content="Matthew Cobbs">
 
@@ -48,9 +48,20 @@
 
     <section id="main" role="main">
 
-        <h1>Page Not Found</h1>
+        <h1>Page Not Found - Error 404</h1>
         
-        <a href="/">Try home.</a>
+        <div id="cse" style="width: 100%;">Loading</div>
+        <script src="//www.google.com/jsapi" type="text/javascript"></script>
+        <script type="text/javascript"> 
+          google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
+          google.setOnLoadCallback(function() {
+            var customSearchControl = new google.search.CustomSearchControl(
+              '013680153194229295273:qf762-wsgxc');
+
+            customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
+            customSearchControl.draw('cse');
+          }, true);
+        </script>
         
     </section>
 
