--- a/404.html
+++ b/404.html
@@ -18,6 +18,7 @@
   <!-- CSS: implied media=all -->
   <link rel="stylesheet" href="/css/syntax.css">
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="/css/gsearch.css">
   <!-- end CSS-->
 
   <script src="/js/libs/modernizr-2.0.6.min.js"></script>
@@ -53,7 +54,7 @@
         <div id="cse" style="width: 100%;">Loading</div>
         <script src="//www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript"> 
-          google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
+          google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST});
           google.setOnLoadCallback(function() {
             var customSearchControl = new google.search.CustomSearchControl(
               '013680153194229295273:qf762-wsgxc');
