--- a/404.html
+++ b/404.html
@@ -54,10 +54,10 @@
         <div id="cse" style="width: 100%;">Loading</div>
         <script src="//www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript"> 
-          google.load('search', '1', {language : 'en', style : google.loader.themes.MINIMALIST});
+          google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
           google.setOnLoadCallback(function() {
             var customSearchControl = new google.search.CustomSearchControl(
-              '013680153194229295273:qf762-wsgxc');
+              '013680153194229295273:4xubroyqcd4');
 
             customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
             customSearchControl.draw('cse');
