--- a/404.html
+++ b/404.html
@@ -67,7 +67,7 @@
             </p>
         </div>
         
-        <div id="cse" style="width: 100%;">Loading</div>
+        <div id="cse">Loading</div>
         <script src="//www.google.com/jsapi" type="text/javascript"></script>
         <script type="text/javascript"> 
           google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
