--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@ title: Matthew Cobbs, Detroit Web Developer
 </div>
 <!-- end .hero-unit -->
 
-<!-- start .row -->
-<div class="row">
+<!-- start section -->
+<section id="osprojects">
     <h2>Open Source Projects</h2>
     
     <h3>Stitches <small>An HTML5 sprite generator.</small> 
@@ -30,23 +30,21 @@ title: Matthew Cobbs, Detroit Web Developer
 
     <h3>Tanchor <small>The (anchor) URL parsing library.</small> 
         <a href="/tanchor" class="btn small info">Learn more &raquo;</a></h3>        
-</div>
-<!-- end .row -->
+</section>
+<!-- end section -->
 
-<!-- start .row -->
-<div class="row">    
+<!-- start section -->
+<section id="blogposts">    
     <h2>Blog Posts</h2>
     
 {% for post in site.posts %}
     <h3><a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h3>
 {% endfor %}
-</div>
-<!-- end .row -->
+</section>
+<!-- end section -->
 
-<!-- start .row -->
-<div class="row">
-    <section id="comments">
-        <div class="fb-comments" data-href="" data-num-posts="2" data-width="572"></div>
-    </section>
-</div>
-<!-- end .row -->
+<!-- start section -->
+<section id="comments">
+    <div class="fb-comments" data-href="" data-num-posts="2" data-width="572"></div>
+</section>
+<!-- end section -->
