trying a different page structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Matthew Cobbs, Detroit Web Developer
         developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction, 
         and JavaScript.</p>
     
-    <p><a href="mailto:draeton@gmail.com" class="btn">Email</a> 
+    <p><a href="mailto:draeton@gmail.com" class="btn primary">Email</a> 
         <a href="http://github.com/draeton/" class="btn">Github</a> 
         <a href="http://stackoverflow.com/users/230483/draeton" class="btn">Stack Overflow</a> 
         <a href="http://twitter.com/draeton/" class="btn">Twitter</a></p>
