fixing search form

--- a/404.html
+++ b/404.html
@@ -35,8 +35,8 @@
             <div class="fill">
                 <div class="container span10">
                     <a class="brand" href="/">Matthew Cobbs</a>
-                    <form action="#" class="search pull-right">
-                        <input type="text" placeholder="Search"/>
+                    <form action="/search.html" class="search pull-right">
+                        <input name="gsc" type="text" placeholder="Search"/>
                     </form>
                 </div>
             </div>
