--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@ title: Matthew Cobbs, Detroit Web Developer
         and JavaScript.</p>
     
     <p><a href="mailto:draeton@gmail.com" class="btn primary">Email</a> 
-        <a href="http://github.com/draeton/" class="btn">Github</a> 
-        <a href="http://stackoverflow.com/users/230483/draeton" class="btn">Stack Overflow</a> 
-        <a href="http://twitter.com/draeton/" class="btn">Twitter</a></p>
+        <a href="http://github.com/draeton/" class="btn success">Github</a> 
+        <a href="http://stackoverflow.com/users/230483/draeton" class="btn success">Stack Overflow</a> 
+        <a href="http://twitter.com/draeton/" class="btn success">Twitter</a></p>
 </div>
 <!-- end .hero-unit -->
 
