--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Matthew Cobbs, Detroit Web Developer
 
     <h4
     {% if post.teaser %}
-        data-placement="above" rel="twipsy" title="{{ post.teaser }}"
+        data-placement="left" rel="twipsy" title="{{ post.teaser }}"
     {% endif %}
     ><a href="{{ post.url }}">{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h4>
     
