--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Matthew Cobbs, Detroit Web Developer
 
     <h4><a href="{{ post.url }}"
         {% if post.teaser %}
-            data-placement="above" rel="twipsy" title="{{ post.teaser }}"
+            data-placement="right" rel="twipsy" title="{{ post.teaser }}"
         {% endif %}
         >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h4>
     
