--- a/index.html
+++ b/index.html
@@ -52,6 +52,6 @@ title: Matthew Cobbs, Detroit Web Developer
 
 <!-- start section -->
 <section id="comments">
-    <div class="fb-comments" data-href="" data-num-posts="2" data-width="580"></div>
+    <div class="fb-comments" data-href="{{ page.url }}" data-num-posts="2" data-width="580"></div>
 </section>
 <!-- end section -->
