--- a/archives.html
+++ b/archives.html
@@ -7,7 +7,7 @@ title: Matthew Cobbs, Detroit Web Developer
 <section id="blogposts">    
     <h2>Blog Posts</h2>
     
-{% for post in paginator.posts %}
+{% for post in site.posts %}
 
     <h4><a href="{{ post.url }}"
         {% if post.teaser %}
