moved all posts button

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ title: Matthew Cobbs, Detroit Web Developer
     
 {% endfor %}
 
-    <p><a href="/archives.html" class="btn small info">Read all posts &raquo;</a></p>
+    <h4><a href="/archives.html" class="btn small info">Read all posts &raquo;</a></h4>
 </section>
 <!-- end section -->
 
