Adding profile links

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@ title: Matthew Cobbs, Detroit Web Developer
     <p><a href="mailto:draeton@gmail.com" class="btn primary">Email</a>
         <a href="http://github.com/draeton/" class="btn success">Github</a>
         <a href="http://stackoverflow.com/users/230483/draeton" class="btn success">Stack Overflow</a>
-        <a href="http://twitter.com/draeton/" class="btn success">Twitter</a></p>
+        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn success">LinkedIn</a>
+        <a href="http://twitter.com/draeton/" class="btn success">Twitter</a>
+        <a href="http://draeton.tumblr.com/" class="btn success">Tumblr</a></p>
 </div>
 <!-- end .hero-unit -->
 
