Updating google custom search

--- a/search.html
+++ b/search.html
@@ -6,20 +6,18 @@ title: Matthew Cobbs, Detroit Web Developer
 <!-- start section -->
 <section id="search">
     <h2>Search</h2>
-    
-    <!-- google custom search -->
-    <div id="cse">Loading</div>
-    <script src="//www.google.com/jsapi" type="text/javascript"></script>
-    <script type="text/javascript"> 
-      google.load('search', '1', {language : 'en', style : google.loader.themes.SHINY});
-      google.setOnLoadCallback(function() {
-        var customSearchControl = new google.search.CustomSearchControl(
-          '013680153194229295273:4xubroyqcd4');
 
-        customSearchControl.setResultSetSize(google.search.Search.FILTERED_CSE_RESULTSET);
-        customSearchControl.draw('cse');
-      }, true);
+    <!-- google custom search -->
+    <gcse:search></gcse:search>
+
+    <script>
+    (function() {
+      var cx = '013680153194229295273:4xubroyqcd4';
+      var gcse = document.createElement('script'); gcse.type = 'text/javascript'; gcse.async = true;
+      gcse.src = (document.location.protocol == 'https' ? 'https:' : 'http:') +
+          '//www.google.com/cse/cse.js?cx=' + cx;
+      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gcse, s);
+    })();
     </script>
-    <link rel="stylesheet" href="/css/gsearch.css">      
 </section>
 <!-- end section -->
