--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Matthew Cobbs, Detroit Web Developer
 
     <p><div class="btn-group">
         <a href="mailto:draeton@gmail.com" class="btn btn-primary">Email</a>
-        <a href="http://github.com/draeton/" class="btn btn-info">Github</a>
+        <a href="http://github.com/draeton/" class="btn btn-success">Github</a>
         <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-info">LinkedIn</a>
         <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
         <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
@@ -55,7 +55,7 @@ title: Matthew Cobbs, Detroit Web Developer
 
 {% endfor %}
 
-    <h4><a href="/archives.html" class="btn small info">Read all posts &raquo;</a></h4>
+    <h4><a href="/archives.html" class="btn btn-small btn-info">Read all posts &raquo;</a></h4>
 </section>
 <!-- end section -->
 
