--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@ title: Matthew Cobbs, Detroit Web Developer
         and JavaScript.</p>
 
     <p><div class="btn-group">
-        <a href="mailto:draeton@gmail.com" class="btn btn-primary">Email</a>
-        <a href="http://github.com/draeton/" class="btn btn-success">Github</a>
+        <a href="mailto:draeton@gmail.com" class="btn btn-success">Email</a>
+        <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
         <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-info">LinkedIn</a>
         <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
         <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
