--- a/index.html
+++ b/index.html
@@ -27,17 +27,10 @@ title: Matthew Cobbs, Detroit Web Developer
 <section id="osprojects">
     <h2>Open Source Projects</h2>
 
-    <h3>Stitches <small>An HTML5 sprite generator.</small>
-        <a href="/stitches" class="btn btn-small btn-info">Learn more &raquo;</a></h3>
-
-    <h3>Lockdown <small>Obfuscates code snippets by writing them to the canvas.</small>
-        <a href="/lockdown" class="btn btn-small btn-info">Learn more &raquo;</a></h3>
-
-    <h3>Tanchor <small>The (anchor) URL parsing library.</small>
-        <a href="/tanchor" class="btn btn-small btn-info">Learn more &raquo;</a></h3>
-
-    <h3>Deeplink <small>Easy-peasy deeplinking manager.</small>
-        <a href="/deeplink" class="btn btn-small btn-info">Learn more &raquo;</a></h3>
+    <h3><a href="/stitches">Stitches</a> <small>An HTML5 sprite generator.</small></h3>
+    <h3><a href="/lockdown">Lockdown</a> <small>Obfuscates code snippets by writing them to the canvas.</small></h3>
+    <h3><a href="/tanchor">Tanchor</a> <small>The (anchor) URL parsing library.</small></h3>
+    <h3><a href="/deeplink">Deeplink</a> <small>Easy-peasy deeplinking manager.</small></h3>
 </section>
 <!-- end section -->
 
