--- a/index.html
+++ b/index.html
@@ -5,21 +5,22 @@ title: Matthew Cobbs, Detroit Web Developer
 
 <!-- start .hero-unit -->
 <div class="hero-unit">
-    <h1>Matthew Cobbs <small>Detroit web developer</small></h1>
+    <h1>Matthew Cobbs</h1>
+    <h1><small>Detroit web developer</small></h1>
 
     <p>Matthew Cobbs is a 31 year-old web developer from Detroit. As both an in-house and
         freelance developer, he has several years of experience with planning, designing,
         developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction,
         and JavaScript.</p>
 
-    <p><div class="btn-group">
+    <div class="btn-group">
         <a href="mailto:draeton@gmail.com" class="btn btn-success">Email</a>
         <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
         <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-info">LinkedIn</a>
         <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
         <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
         <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
-    </div></p>
+    </div>
 </div>
 <!-- end .hero-unit -->
 
