--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@ title: Matthew Cobbs, Detroit Web Developer
 <!-- start .hero-unit -->
 <div class="hero-unit">
     <h1>Matthew Cobbs</h1>
-    <h1><small>Detroit web developer</small></h1>
+
+    <p class="lead">Detroit web developer</p>
 
     <p>Matthew Cobbs is a 31 year-old web developer from Detroit. As both an in-house and
         freelance developer, he has several years of experience with planning, designing,
