--- a/index.html
+++ b/index.html
@@ -11,17 +11,13 @@ title: Matthew Cobbs, Detroit Web Developer
         developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction,
         and JavaScript.</p>
 
-    <div class="btn-toolbar">
-        <div class="btn-group">
-            <a href="mailto:draeton@gmail.com" class="btn btn-primary">Email</a>
-            <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
-            <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary">LinkedIn</a>
-        </div>
-        <div class="btn-group">
-            <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
-            <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
-            <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
-        </div>
+    <div class="btn-group">
+        <a href="mailto:draeton@gmail.com" class="btn btn-success"><i class="icon-envelope icon-envelope-white"></i> Email</a>
+        <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
+        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary">LinkedIn</a>
+        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
+        <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
+        <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
     </div>
 </div>
 <!-- end .hero-unit -->
