--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Matthew Cobbs, Detroit Web Developer
         and JavaScript.</p>
 
     <div class="btn-group">
-        <a href="mailto:draeton@gmail.com" class="btn btn-success"><i class="icon-envelope icon-envelope-white"></i> Email</a>
+        <a href="mailto:draeton@gmail.com" class="btn btn-success">Email</a>
         <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
         <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary">LinkedIn</a>
         <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
