--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@ title: Matthew Cobbs, Detroit Web Developer
         and JavaScript.</p>
 
     <div class="btn-group">
-        <a href="mailto:draeton@gmail.com" class="btn btn-success">Email</a>
-        <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
-        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary">LinkedIn</a>
-        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
-        <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
-        <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
+        <a href="mailto:draeton@gmail.com" class="btn btn-success"><i class="contacts contacts-gmail"></i>Email</a>
+        <a href="http://github.com/draeton/" class="btn btn-primary"><i class="contacts contacts-github"></i>Github</a>
+        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary"><i class="contacts contacts-linkedin"></i>LinkedIn</a>
+        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info"><i class="contacts contacts-stackoverflow"></i>Stack Overflow</a>
+        <a href="http://twitter.com/draeton/" class="btn btn-info"><i class="contacts contacts-twitter"></i>Twitter</a>
+        <a href="http://draeton.tumblr.com/" class="btn btn-info"><i class="contacts contacts-tumblr"></i>Tumblr</a>
     </div>
 </div>
 <!-- end .hero-unit -->
