Separate icon groups for desktop and other

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@ title: Matthew Cobbs, Detroit Web Developer
         developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction,
         and JavaScript.</p>
 
-    <div class="btn-group">
-        <a href="mailto:draeton@gmail.com" class="btn btn-success"><i class="contacts contacts-gmail"></i>Email</a>
-        <a href="http://github.com/draeton/" class="btn btn-primary"><i class="contacts contacts-github"></i>Github</a>
-        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary"><i class="contacts contacts-linkedin"></i>LinkedIn</a>
-        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info"><i class="contacts contacts-stackoverflow"></i>Stack Overflow</a>
-        <a href="http://twitter.com/draeton/" class="btn btn-info"><i class="contacts contacts-twitter"></i>Twitter</a>
-        <a href="http://draeton.tumblr.com/" class="btn btn-info"><i class="contacts contacts-tumblr"></i>Tumblr</a>
+    <div class="btn-group hidden-phone hidden-tablet">
+        <a href="mailto:draeton@gmail.com" class="btn btn-success">Email</a>
+        <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
+        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary">LinkedIn</a>
+        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info">Stack Overflow</a>
+        <a href="http://twitter.com/draeton/" class="btn btn-info">Twitter</a>
+        <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
+    </div>
+
+    <div class="btn-group hidden-desktop">
+        <a href="mailto:draeton@gmail.com" class="btn btn-success"><i class="contacts contacts-gmail"></i></a>
+        <a href="http://github.com/draeton/" class="btn btn-primary"><i class="contacts contacts-github"></i></a>
+        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary"><i class="contacts contacts-linkedin"></i></a>
+        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info"><i class="contacts contacts-stackoverflow"></i></a>
+        <a href="http://twitter.com/draeton/" class="btn btn-info"><i class="contacts contacts-twitter"></i></a>
+        <a href="http://draeton.tumblr.com/" class="btn btn-info"><i class="contacts contacts-tumblr"></i></a>
     </div>
 </div>
 <!-- end .hero-unit -->
