--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@ title: Matthew Cobbs, Detroit Web Developer
     </div>
 
     <div class="btn-group hidden-desktop">
-        <a href="mailto:draeton@gmail.com" class="btn btn-success"><i class="contacts contacts-gmail"></i></a>
-        <a href="http://github.com/draeton/" class="btn btn-primary"><i class="contacts contacts-github"></i></a>
-        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary"><i class="contacts contacts-linkedin"></i></a>
-        <a href="http://stackoverflow.com/users/230483/draeton" class="btn btn-info"><i class="contacts contacts-stackoverflow"></i></a>
-        <a href="http://twitter.com/draeton/" class="btn btn-info"><i class="contacts contacts-twitter"></i></a>
-        <a href="http://draeton.tumblr.com/" class="btn btn-info"><i class="contacts contacts-tumblr"></i></a>
+        <a href="mailto:draeton@gmail.com" class="btn"><i class="contacts contacts-gmail"></i></a>
+        <a href="http://github.com/draeton/" class="btn"><i class="contacts contacts-github"></i></a>
+        <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn"><i class="contacts contacts-linkedin"></i></a>
+        <a href="http://stackoverflow.com/users/230483/draeton" class="btn"><i class="contacts contacts-stackoverflow"></i></a>
+        <a href="http://twitter.com/draeton/" class="btn"><i class="contacts contacts-twitter"></i></a>
+        <a href="http://draeton.tumblr.com/" class="btn"><i class="contacts contacts-tumblr"></i></a>
     </div>
 </div>
 <!-- end .hero-unit -->
