--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Matthew Cobbs, Detroit Web Developer
 <!-- start .hero-unit -->
 <div class="hero-unit">
     <h1>Matthew Cobbs</h1>
-    <p>Matthew Cobbs is a 31 year-old web developer from Detroit. As both an in-house and
+    <p>Matthew Cobbs is a 31-year-old web developer from Detroit. As both an in-house and
         freelance developer, he has several years of experience with planning, designing,
         developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction,
         and JavaScript.</p>
