--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Matthew Cobbs, Detroit Web Developer
         developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction,
         and JavaScript.</p>
 
-    <div class="btn-group hidden-phone hidden-tablet">
+    <div class="btn-group btn-contacts-wired hidden-phone hidden-tablet">
         <a href="mailto:draeton@gmail.com" class="btn btn-success">Email</a>
         <a href="http://github.com/draeton/" class="btn btn-primary">Github</a>
         <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn btn-primary">LinkedIn</a>
@@ -20,7 +20,7 @@ title: Matthew Cobbs, Detroit Web Developer
         <a href="http://draeton.tumblr.com/" class="btn btn-info">Tumblr</a>
     </div>
 
-    <div class="btn-group hidden-desktop">
+    <div class="btn-group btn-contacts-mobile hidden-desktop">
         <a href="mailto:draeton@gmail.com" class="btn" title="Email"><i class="contacts contacts-gmail"></i></a>
         <a href="http://github.com/draeton/" class="btn" title="Github"><i class="contacts contacts-github"></i></a>
         <a href="http://www.linkedin.com/in/matthewcobbs/" class="btn" title="LinkedIn"><i class="contacts contacts-linkedin"></i></a>
