--- a/search.html
+++ b/search.html
@@ -3,10 +3,12 @@ layout: default
 title: Matthew Cobbs, Detroit Web Developer
 ---
 
+<div class="page-header">
+    <h1>Search</h1>
+</div>
+
 <!-- start section -->
 <section id="search">
-    <h2>Search</h2>
-
     <!-- google custom search -->
     <gcse:search></gcse:search>
 
