--- a/index.html
+++ b/index.html
@@ -31,34 +31,38 @@ title: Matthew Cobbs, Detroit Web Developer
 </div>
 <!-- end .hero-unit -->
 
-<!-- start section -->
-<section id="osprojects">
-    <h2>Open Source Projects</h2>
+<div class="container-fluid">
+    <div class="row-fluid">
+        <!-- start section -->
+        <section id="blogposts" class="span6">
+            <h2>Posts</h2>
 
-    <h4><i class="icon-briefcase"></i> <a href="/stitches">Stitches</a> <small>An HTML5 sprite generator.</small></h4>
-    <h4><i class="icon-briefcase"></i> <a href="/lockdown">Lockdown</a> <small>Obfuscates code snippets by writing them to the canvas.</small></h4>
-    <h4><i class="icon-briefcase"></i> <a href="/tanchor">Tanchor</a> <small>The (anchor) URL parsing library.</small></h4>
-    <h4><i class="icon-briefcase"></i> <a href="/deeplink">Deeplink</a> <small>Easy-peasy deeplinking manager.</small></h4>
-</section>
-<!-- end section -->
+        {% for post in site.posts limit:6 %}
 
-<!-- start section -->
-<section id="blogposts">
-    <h2>Posts</h2>
+            <h4><a href="{{ post.url }}"
+                {% if post.teaser %}
+                    data-toggle="tooltip" data-placement="right" title="{{ post.teaser }}"
+                {% endif %}
+                >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h4>
 
-{% for post in site.posts limit:6 %}
+        {% endfor %}
 
-    <h4><a href="{{ post.url }}"
-        {% if post.teaser %}
-            data-toggle="tooltip" data-placement="right" title="{{ post.teaser }}"
-        {% endif %}
-        >{{ post.title }}</a> <small>{{ post.date | date_to_string }}</small></h4>
+            <h4><a href="/archives.html" class="btn btn-small btn-info">Read all posts &raquo;</a></h4>
+        </section>
+        <!-- end section -->
 
-{% endfor %}
+        <!-- start section -->
+        <section id="osprojects" class="span6">
+            <h2>Open Source Projects</h2>
 
-    <h4><a href="/archives.html" class="btn btn-small btn-info">Read all posts &raquo;</a></h4>
-</section>
-<!-- end section -->
+            <h4><i class="icon-briefcase"></i> <a href="/stitches">Stitches</a> <small>An HTML5 sprite generator.</small></h4>
+            <h4><i class="icon-briefcase"></i> <a href="/lockdown">Lockdown</a> <small>Obfuscates code snippets by writing them to the canvas.</small></h4>
+            <h4><i class="icon-briefcase"></i> <a href="/tanchor">Tanchor</a> <small>The (anchor) URL parsing library.</small></h4>
+            <h4><i class="icon-briefcase"></i> <a href="/deeplink">Deeplink</a> <small>Easy-peasy deeplinking manager.</small></h4>
+        </section>
+        <!-- end section -->
+    </div>
+</div>
 
 <!-- start section -->
 <section id="comments">
