--- a/highlights.html
+++ b/highlights.html
@@ -1,3 +1,8 @@
+---
+layout: default
+title: Matthew Cobbs, Detroit Web Developer
+---
+
 <div class="page-header">
     <h1>Career Highlights</h1>
 </div>
