--- a/highlights.html
+++ b/highlights.html
@@ -14,9 +14,9 @@ title: Matthew Cobbs, Detroit Web Developer
         <h2>Ford My Saved Items <span class="small">(2012, Team Detroit)</span></h2>
 
         <ul class="unstyled">
-            <li><i class="icon-share-alt"></i> <a href="http://www.ford.com/mysaveditems/">http://www.ford.com/mysaveditems/</a></li>
-            <li><i class="icon-share-alt"></i> <a href="http://www.lincoln.com/mysaveditems/">http://www.lincoln.com/mysaveditems/</a></li>
-            <li><i class="icon-share-alt"></i> <a href="http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/">http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/</a> <span class="text-info">(See the "Save" link)</span></li>
+            <li><a href="http://www.ford.com/mysaveditems/">http://www.ford.com/mysaveditems/</a></li>
+            <li><a href="http://www.lincoln.com/mysaveditems/">http://www.lincoln.com/mysaveditems/</a></li>
+            <li><a href="http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/">http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/</a> <span class="text-info">(See the "Save" link)</span></li>
         </ul>
 
         <p>This project involved adding a new feature to the Ford brand websites, including the Save widget, which is syndicated across all Ford shopping tools sites (e.g. Search Dealer Inventory, Certified Pre-Owned). I was the lead front-end developer on this project, which involved integrating code and efforts from a number of different vendors. I am responsible for the front-end code architecture. It demonstrates working with 3rd party authentication, RESTful APIs, once again JavaScript templates, and URL hash-based navigation.</p>
@@ -36,7 +36,7 @@ title: Matthew Cobbs, Detroit Web Developer
         <h2>OnStar Experience OnStar <span class="small">(2011, Digitas)</span></h2>
 
         <ul class="unstyled">
-            <li><i class="icon-share-alt"></i> <a href="https://www.onstar.com/web/portal/experienceonstar">https://www.onstar.com/web/portal/experienceonstar</a></li>
+            <li><a href="https://www.onstar.com/web/portal/experienceonstar">https://www.onstar.com/web/portal/experienceonstar</a></li>
         </ul>
 
         <p>This project was essentially a port of an existing Flash module to HTML5, with some additional functionality involved. I was the lead front-end developer on the project. It demonstrates the use of JavaScript templates, URL hash-based navigation, and the incorporation of 3rd party APIs from Brightcove for HTML5 video. I also rewrote the OnStar Omniture tracking module to be faster and more standards compliant.</p>
@@ -53,7 +53,7 @@ title: Matthew Cobbs, Detroit Web Developer
         <h2>Ford Ratings and Reviews <span class="small">(2012, Team Detroit)</span></h2>
 
         <ul class="unstyled">
-            <li><i class="icon-share-alt"></i> <a href="http://www.ford.com/cars/fusion/reviews/">http://www.ford.com/cars/fusion/reviews/</a></li>
+            <li><a href="http://www.ford.com/cars/fusion/reviews/">http://www.ford.com/cars/fusion/reviews/</a></li>
         </ul>
 
         <p>This project involved adding a new section to the Ford website. I was the lead front-end developer on this project. I am responsible for the front-end architecture, for which I decided to take a widget-based approach. It demonstrates the use of RESTful APIs and event-based module development.
@@ -72,10 +72,10 @@ title: Matthew Cobbs, Detroit Web Developer
         <h2>Stitches <span class="small">(2012)</span></h2>
 
         <ul class="unstyled">
-            <li><i class="icon-share-alt"></i> <a href="http://draeton.github.com/stitches/">http://draeton.github.com/stitches/</a></li>
+            <li><a href="http://draeton.github.com/stitches/">http://draeton.github.com/stitches/</a></li>
         </ul>
 
-        <p>This is a personal open source project that got a mention by Smashing Magazine (<a href="http://www.twylah.com/smashingmag/tweets/226007275523936256">http://www.twylah.com/smashingmag/tweets/226007275523936256</a>), and drives over 5000 visitors a month to my personal site. It demonstrates the ability to work with the new HTML5 APIs. Visitors to the repository also see the use of build scripts (Apache Ant), automated JavaScript documentation (Docco), minification (YUI), linting (JSHint), and unit testing (QUnit).</p>
+        <p>This is a personal open source project that got a <a href="http://www.twylah.com/smashingmag/tweets/226007275523936256">mention by Smashing Magazine</a>, and drives over 5000 visitors a month to my personal site. It demonstrates the ability to work with the new HTML5 APIs. Visitors to the repository also see the use of build scripts (Apache Ant), automated JavaScript documentation (Docco), minification (YUI), linting (JSHint), and unit testing (QUnit).</p>
 
         <p class="muted">I wrote all of the code for this project:</p>
 
