--- a/highlights.html
+++ b/highlights.html
@@ -11,7 +11,7 @@ title: Matthew Cobbs, Detroit Web Developer
 <section id="highlights">
 
     <div>
-        <h2>Ford My Saved Items <span class="small">(2012, Team Detroit)</span></h2>
+        <h2>Ford My Saved Items <small>(2012, Team Detroit)</small></h2>
 
         <ul class="unstyled">
             <li><a href="http://www.ford.com/mysaveditems/">http://www.ford.com/mysaveditems/</a></li>
@@ -33,7 +33,7 @@ title: Matthew Cobbs, Detroit Web Developer
     </div>
 
     <div>
-        <h2>OnStar Experience OnStar <span class="small">(2011, Digitas)</span></h2>
+        <h2>OnStar Experience OnStar <small>(2011, Digitas)</small></h2>
 
         <ul class="unstyled">
             <li><a href="https://www.onstar.com/web/portal/experienceonstar">https://www.onstar.com/web/portal/experienceonstar</a></li>
@@ -50,7 +50,7 @@ title: Matthew Cobbs, Detroit Web Developer
     </div>
 
     <div>
-        <h2>Ford Ratings and Reviews <span class="small">(2012, Team Detroit)</span></h2>
+        <h2>Ford Ratings and Reviews <small>(2012, Team Detroit)</small></h2>
 
         <ul class="unstyled">
             <li><a href="http://www.ford.com/cars/fusion/reviews/">http://www.ford.com/cars/fusion/reviews/</a></li>
@@ -69,7 +69,7 @@ title: Matthew Cobbs, Detroit Web Developer
     </div>
 
     <div>
-        <h2>Stitches <span class="small">(2012)</span></h2>
+        <h2>Stitches <small>(2012)</small></h2>
 
         <ul class="unstyled">
             <li><a href="http://draeton.github.com/stitches/">http://draeton.github.com/stitches/</a></li>
