Styling and page titles

--- a/highlights.html
+++ b/highlights.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Matthew Cobbs, Detroit Web Developer
+title: Matthew Cobbs : Career Highlights
 ---
 
 <div class="page-header">
