--- a/archives.html
+++ b/archives.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Matthew Cobbs, Detroit Web Developer
+title: Matthew Cobbs : Archives
 ---
 
 <div class="page-header">
