--- a/search.html
+++ b/search.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Matthew Cobbs, Detroit Web Developer
+title: Matthew Cobbs : Search Results
 ---
 
 <div class="page-header">
