--- a/highlights.html
+++ b/highlights.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: Matthew Cobbs : Career Highlights
+title: Matthew Cobbs &raquo; Career Highlights
 ---
 
 <div class="page-header">
