--- a/highlights.html
+++ b/highlights.html
@@ -21,7 +21,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <p>This project involved adding a new feature to the Ford brand websites, including the Save widget, which is syndicated across all Ford shopping tools sites (e.g. Search Dealer Inventory, Certified Pre-Owned). I was the lead front-end developer on this project, which involved integrating code and efforts from a number of different vendors. I am responsible for the front-end code architecture. It demonstrates working with 3rd party authentication, RESTful APIs, once again JavaScript templates, and URL hash-based navigation.</p>
 
-        <p class="muted">This is some of the code I wrote for this project:</p>
+        <p><em>This is some of the code I wrote for this project:</em></p>
 
         <ul class="unstyled">
             <li><i class="icon-file"></i> <a href="http://www.ford.com/ngtemplates/ngassets/js/ngbs.u.anchor.js">http://www.ford.com/ngtemplates/ngassets/js/ngbs.u.anchor.js</a></li>
@@ -41,7 +41,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <p>This project was essentially a port of an existing Flash module to HTML5, with some additional functionality involved. I was the lead front-end developer on the project. It demonstrates the use of JavaScript templates, URL hash-based navigation, and the incorporation of 3rd party APIs from Brightcove for HTML5 video. I also rewrote the OnStar Omniture tracking module to be faster and more standards compliant.</p>
 
-        <p class="muted">This is some of the code I wrote for this project:</p>
+        <p><em>This is some of the code I wrote for this project:</em></p>
 
         <ul class="unstyled">
             <li><i class="icon-file"></i> <a href="https://www.onstar.com/tunnel-web/webdav/portal/document_library/js/experience-onstar/lounge.js">https://www.onstar.com/tunnel-web/webdav/portal/document_library/js/experience-onstar/lounge.js</a></li>
@@ -58,7 +58,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <p>This project involved adding a new section to the Ford website. I was the lead front-end developer on this project. I am responsible for the front-end architecture, for which I decided to take a widget-based approach. It demonstrates the use of RESTful APIs and event-based module development.
 
-        <p class="muted">This is some of the code I wrote for this project:
+        <p><em>This is some of the code I wrote for this project:</em></p>
 
         <ul class="unstyled">
             <li><i class="icon-file"></i> <a href="http://www.ford.com/ngtemplates/ngassets/com/forddirect/ng/views/nameplate/ratings-and-reviews/core/reviews.js">http://www.ford.com/ngtemplates/ngassets/com/forddirect/ng/views/nameplate/ratings-and-reviews/core/reviews.js</a></li>
@@ -77,7 +77,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <p>This is a personal open source project that got a <a href="http://www.twylah.com/smashingmag/tweets/226007275523936256">mention by Smashing Magazine</a>, and drives over 5000 visitors a month to my personal site. It demonstrates the ability to work with the new HTML5 APIs. Visitors to the repository also see the use of build scripts (Apache Ant), automated JavaScript documentation (Docco), minification (YUI), linting (JSHint), and unit testing (QUnit).</p>
 
-        <p class="muted">I wrote all of the code for this project:</p>
+        <p><em>I wrote all of the code for this project:</em></p>
 
         <ul class="unstyled">
             <li><i class="icon-file"></i> <a href="https://github.com/draeton/stitches">https://github.com/draeton/stitches</a></li>
