--- a/highlights.html
+++ b/highlights.html
@@ -16,7 +16,7 @@ title: Matthew Cobbs &raquo; Career Highlights
         <ul class="unstyled">
             <li><a href="http://www.ford.com/mysaveditems/">http://www.ford.com/mysaveditems/</a></li>
             <li><a href="http://www.lincoln.com/mysaveditems/">http://www.lincoln.com/mysaveditems/</a></li>
-            <li><a href="http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/">http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/</a> <span class="text-info">(See the "Save" link)</span></li>
+            <li><a href="http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/">http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/</a> <small>(See the "Save" link)</small></li>
         </ul>
 
         <p>This project involved adding a new feature to the Ford brand websites, including the Save widget, which is syndicated across all Ford shopping tools sites (e.g. Search Dealer Inventory, Certified Pre-Owned). I was the lead front-end developer on this project, which involved integrating code and efforts from a number of different vendors. I am responsible for the front-end code architecture. It demonstrates working with 3rd party authentication, RESTful APIs, once again JavaScript templates, and URL hash-based navigation.</p>
