--- a/highlights.html
+++ b/highlights.html
@@ -33,7 +33,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <div class="span4">
             <img src="/img/projects/mysaveditems.png" width="400" height="250" alt="Ford &raquo; My Saved Items"/>
-            <p class="text-right muted">2012, Team Detroit</p>
+            <small>2012, Team Detroit</small>
         </div>
     </div>
 
