--- a/highlights.html
+++ b/highlights.html
@@ -55,7 +55,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <div class="span4">
             <img src="/img/projects/onstar.png" width="400" height="250" alt="OnStar &raquo; Experience OnStar"/>
-            <p class="text-right muted">2011, Digitas</p>
+            <p class="muted">2011, Digitas</p>
         </div>
     </div>
 
@@ -79,7 +79,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <div class="span4">
             <img src="/img/projects/reviews.png" width="400" height="250" alt="Ford &raquo; Ratings and Reviews"/>
-            <p class="text-right muted">2012, Team Detroit</p>
+            <p class="muted">2012, Team Detroit</p>
         </div>
     </div>
 
@@ -100,7 +100,7 @@ title: Matthew Cobbs &raquo; Career Highlights
 
         <div class="span4">
             <img src="/img/projects/stitches.png" width="400" height="250" alt="Stitches"/>
-            <p class="text-right muted">2012</p>
+            <p class="muted">2012</p>
         </div>
     </div>
 
