--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ title: Matthew Cobbs, Detroit Web Developer
     <h1>Matthew Cobbs</h1>
     <p>Matthew Cobbs is a 31-year-old web developer from Detroit. As both an in-house and
         freelance developer, he has several years of experience with planning, designing,
-        developing, and maintaining websites. Matthew loves sushi, Almodovar, good fiction,
+        developing, and maintaining websites. Matthew loves sushi, Almodovar, <em data-toggle="tooltip" title="Cormac McCarthy, Stephen King, Jack Kerouac, Jon Krakauer, Jane Austen&hellip;">good</em> fiction,
         and JavaScript.</p>
 
     <div>
