--- a/highlights.html
+++ b/highlights.html
@@ -20,7 +20,7 @@ title: Matthew Cobbs &raquo; Career Highlights
                 <li><a href="http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/" data-toggle="tooltip" title="See the &lsquo;Save&rsquo; link">http://www.lincoln.com/cars/mkz/gallery/photos/photo:0/</a></li>
             </ul>
 
-            <p>This project involved adding a new feature to the Ford brand websites, including the Save widget, which is syndicated across all Ford shopping tools sites (e.g. Search Dealer Inventory, Certified Pre-Owned). I was the lead front-end developer on this project, which involved integrating code and efforts from a number of different vendors. I am responsible for the front-end code architecture. It demonstrates working with 3rd party authentication, RESTful APIs, once again JavaScript templates, and URL hash-based navigation.</p>
+            <p>This project involved adding a new feature to the Ford brand websites, including the Save widget, which is syndicated across all Ford shopping tools sites (e.g. Search Dealer Inventory, Certified Pre-Owned). I was the lead front-end developer on this project, which involved integrating code and efforts from a number of different vendors. I am responsible for the front-end code architecture. It demonstrates working with 3rd party authentication, RESTful APIs, JavaScript templates, and URL hash-based navigation.</p>
 
             <p>Code samples —
                 <a href="http://www.ford.com/ngtemplates/ngassets/js/ngbs.u.anchor.js">1</a>,
@@ -45,7 +45,7 @@ title: Matthew Cobbs &raquo; Career Highlights
                 <li><a href="https://www.onstar.com/web/portal/experienceonstar">https://www.onstar.com/web/portal/experienceonstar</a></li>
             </ul>
 
-            <p>This project was essentially a port of an existing Flash module to HTML5, with some additional functionality involved. I was the lead front-end developer on the project. It demonstrates the use of JavaScript templates, URL hash-based navigation, and the incorporation of 3rd party APIs from Brightcove for HTML5 video. I also rewrote the OnStar Omniture tracking module to be faster and more standards compliant.</p>
+            <p>This project was essentially a port of an existing Flash module to HTML5, with some additional functionality involved. I was the lead front-end developer on the project. It demonstrates the use of (once again) JavaScript templates, URL hash-based navigation, and the incorporation of 3rd party APIs from Brightcove for HTML5 video. I also rewrote the OnStar Omniture tracking module to be faster and more standards compliant.</p>
 
             <p>Code samples —
                 <a href="https://www.onstar.com/tunnel-web/webdav/portal/document_library/js/experience-onstar/lounge.js">1</a>,
