--- a/highlights.html
+++ b/highlights.html
@@ -94,7 +94,7 @@ title: Matthew Cobbs &raquo; Career Highlights
             <p>This is a personal open source project that got a <a href="http://www.twylah.com/smashingmag/tweets/226007275523936256">mention by Smashing Magazine</a>, and drives over 5000 visitors a month to my personal site. It demonstrates the ability to work with the new HTML5 APIs. Visitors to the repository also see the use of build scripts (Apache Ant), automated JavaScript documentation (Docco), minification (YUI), linting (JSHint), and unit testing (QUnit).</p>
 
             <p>Code samples —
-                <a href="https://github.com/draeton/stitches">1</a>
+                <a href="https://github.com/draeton/stitches/tree/master/src">1</a>
             </p>
         </div>
 
